--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+phf = { version = "0.11.2", features = ["macros"] }
+regex = "1.10"
+
+[build-dependencies]
+phf = { version = "0.11.2", features = ["macros"] }
+phf_codegen = "0.11.2"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0.114"
